# Cursos-EBAC

./: README.md
VisualizarComunicarDados/matematicaEstatistica/aplicacaoDados/: aplicacao_dados.py
VisualizarComunicarDados/matematicaEstatistica/correlacaoDados/: correlacao_dados.py
back-end/algoritmos/: controle_estoque.py  digitos_par.py  elemento_unico_array.py  gerenciador_libs.py  soma_array.py
back-end/api/: app.py  pyproject.toml
back-end/api-livros/: main.py
back-end/api/api_hashtag/: main.py
back-end/api/api_hashtag/alembic/versions/: 3eb1b8d94a75_create_initial_tables.py
back-end/api/api_hashtag/models/: models.py
back-end/api/api_hashtag/routes/: auth_routes.py  order_routes.py
back-end/api/api_hashtag/routes/dependencies/: dependencies.py
back-end/api/api_hashtag/schemas/: schemas.py
back-end/poo/: aula001.py  classes.py  herenca.py  polimorfismo.py  pratica.py
back-end/recursosAcessorios/: decorator.py  pratica.py  tryExcept.py  yield.py
praticando/: numberGuessingGame.py  quizGame.py  rockPaperScissors.py
tratamentoDados/: clientes_limpos.csv  clientes_remove_outliers.csv  clientes_tratados.csv  estudo_lambda.py  inconsistencias.py  intro_tratamento_dados.py  limpeza_dados.py  outliers.py
tratamentoDados/coletaDados/: clientes.csv  coletaDadosApi.py  coletaDadosBasica.py  coletaDadosWeb.py  estudo.py  estudoDataframeCiencias.py  gerarDados.py
tratamentoDados/preparacao_dados/: normalizacao_padronizacao.py
tratamentoDados/pythonBasico/: Pratique.md  main.py  meu_primeiro_algoritmo.py
(+23 files in other folders)
