[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "bergsonall",email = "bruninhodubal@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.128.3,<0.129.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "alembic (>=1.18.3,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
